--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       justify-content: center;
       align-items: center;
       min-height: 100vh;
-      background: #f4f4f4;
+      background: black;
     }
 
     .container {
