--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     }
 
     button {
-      background-color: #007bff;
+      background-color:green;
       color: white;
       border: none;
       padding: 10px 20px;
@@ -50,7 +50,7 @@
     }
 
     button:hover {
-      background-color: #0056b3;
+      background-color:blue;
     }
 
     #result {
@@ -83,8 +83,7 @@
       if (!file) {
         alert("Please upload a PDF file.");
         return;
-      }
-
+      }
       const grades = [];
       const subjectCodes = [];
       const pdfText = await extractTextFromPDF(file);
@@ -168,15 +167,15 @@
 
     function convertGradeToPoint(grade) {
       const gradeMap = {
-        O: 10,
+        "O": 10,
         "A+": 9,
-        A: 8,
+        "A": 8,
         "B+": 7,
-        B: 6,
-        C: 5,
-        D: 4,
-        E: 3,
-        F: 0,
+        "B": 6,
+        "C: 5,
+        "D": 4,
+        "E": 3,
+        "F": 0,
       };
       return gradeMap[grade.toUpperCase()] || 0;
     }
